--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "José Coelho",
-  "name": "José Coelho | DevOps Engineer | Madeira Island, Portugal",
+  "short_name": "Gbenga Balogun",
+  "name": "Gbenga Balogun | DevOps Engineer | Lagos, Nigeria",
   "icons": [
     {
       "src": "images/favicon/android-chrome-192x192.png",
